--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "resolveJsonModule": true,
     "sourceMap": true,
     "strict": true,
-    "target": "es6"
+    "target": "es6",
+    "allowJs": true
   },
   "exclude": ["node_modules"],
   "files": ["./hardhat.config.ts"],
