docs(.env.example): multi chain env template

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,16 @@
-ARCHIVE_MAINNET_NODE_URL=
 MNEMONIC=here is where your twelve words mnemonic should be put my friend
+KOVAN_RPC_URL=
+ROPSTEN_RRC_URL=
+MAIN_RPC_URL=
+MUMBAI_RPC_URL=
+MATIC_RPC_URL=
+XDAI_RPC_URL=
+AVALANCHE_RPC_URL=
+FUJI_RPC_URL=
+ARBITRUM1_RPC_URL=
+RINKARBY_RPC_URL=
+FANTOM_RPC_URL=
+FANTOM_TEST_RPC_URL=
+BSC_RPC_URL=
+BSC_TEST_RPC_URL=
+
