--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
   "scripts": {
     "clean": "hardhat clean",
     "commit": "git-cz",
-    "compile": "env SKIP_LOAD=true hardhat compile",
+    "compile": "env SKIP_LOAD=true TS_NODE_TRANSPILE_ONLY=1 hardhat compile",
     "coverage": "cross-env CODE_COVERAGE=true hardhat coverage --solcoverjs ./.solcover.js --temp artifacts --testfiles \"./test/**/*.ts\"",
     "deploy": "hardhat deploy:HarvestFinanceAdapter",
     "lint": "yarn run lint:sol && yarn run lint:ts && yarn run prettier:check",
