--- a/.env.example
+++ b/.env.example
@@ -2,15 +2,19 @@ MNEMONIC=here is where your twelve words mnemonic should be put my friend
 KOVAN_RPC_URL=
 ROPSTEN_RRC_URL=
 MAIN_RPC_URL=
+RINKEBY_RPC_URL=
+GOERLI_RPC_URL=
 MUMBAI_RPC_URL=
 MATIC_RPC_URL=
 XDAI_RPC_URL=
 AVALANCHE_RPC_URL=
 FUJI_RPC_URL=
 ARBITRUM1_RPC_URL=
-RINKARBY_RPC_URL=
+RINKEBY_ARBITRUM1_RPC_URL=
 FANTOM_RPC_URL=
 FANTOM_TEST_RPC_URL=
 BSC_RPC_URL=
 BSC_TEST_RPC_URL=
-
+OETHEREUM_RPC_URL=
+KOVAN_OETHEREUM_RPC_URL=
+GOERLI_OETHEREUM_RPC_URL=
