refactor(scripts): add coverage and test scripts

--- a/package.json
+++ b/package.json
@@ -76,16 +76,28 @@
     "clean": "hardhat clean",
     "commit": "git-cz",
     "compile": "env SKIP_LOAD=true TS_NODE_TRANSPILE_ONLY=1 hardhat compile",
-    "coverage": "cross-env CODE_COVERAGE=true hardhat coverage --solcoverjs ./.solcover.js --temp artifacts --testfiles \"./test/**/*.ts\"",
-    "deploy": "hardhat deploy:HarvestFinanceAdapter",
+    "coverage:ethereum": "cross-env CODE_COVERAGE=true FORK=main NETWORK=main TS_NODE_TRANSPILE_ONLY=1 hardhat coverage --solcoverjs ./.solcover.js --temp artifacts --testfiles \"./test/1_ethereum/**/*.ts\"",
+    "coverage:matic": "cross-env CODE_COVERAGE=true FORK=matic NETWORK=matic TS_NODE_TRANSPILE_ONLY=1 hardhat coverage --solcoverjs ./.solcover.js --temp artifacts --testfiles \"./test/2_matic/**/*.ts\"",
+    "coverage:avalanche": "cross-env CODE_COVERAGE=true FORK=avalanche NETWORK=avalanche TS_NODE_TRANSPILE_ONLY=1 hardhat coverage --solcoverjs ./.solcover.js --temp artifacts --testfiles \"./test/3_avalanche/**/*.ts\"",
+    "coverage:arbitrum": "cross-env CODE_COVERAGE=true FORK=arbitrum NETWORK=arbitrum TS_NODE_TRANSPILE_ONLY=1 hardhat coverage --solcoverjs ./.solcover.js --temp artifacts --testfiles \"./test/4_arbitrum/**/*.ts\"",
+    "coverage:xdai": "cross-env CODE_COVERAGE=true FORK=xdai NETWORK=xdai TS_NODE_TRANSPILE_ONLY=1 hardhat coverage --solcoverjs ./.solcover.js --temp artifacts --testfiles \"./test/5_xdai/**/*.ts\"",
+    "coverage:fantom": "cross-env CODE_COVERAGE=true FORK=fantom NETWORK=fantom TS_NODE_TRANSPILE_ONLY=1 hardhat coverage --solcoverjs ./.solcover.js --temp artifacts --testfiles \"./test/6_fantom/**/*.ts\"",
+    "coverage:bsc": "cross-env CODE_COVERAGE=true FORK=bsc NETWORK=bsc TS_NODE_TRANSPILE_ONLY=1 hardhat coverage --solcoverjs ./.solcover.js --temp artifacts --testfiles \"./test/7_bsc/**/*.ts\"",
+    "coverage:oethereum": "cross-env CODE_COVERAGE=true FORK=optimistic_ethereum NETWORK=optimistic_ethereum TS_NODE_TRANSPILE_ONLY=1 hardhat coverage --solcoverjs ./.solcover.js --temp artifacts --testfiles \"./test/8_oethereum/**/*.ts\"",
     "lint": "yarn run lint:sol && yarn run lint:ts && yarn run prettier:check",
     "lint:sol": "solhint --config ./.solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
     "lint:ts": "eslint --config ./.eslintrc.yaml --ignore-path ./.eslintignore --ext .js,.ts .",
     "postinstall": "husky install",
     "prettier": "prettier --config ./.prettierrc.yaml --write \"**/*.{js,json,md,sol,ts}\"",
     "prettier:check": "prettier --check --config ./.prettierrc.yaml \"**/*.{js,json,md,sol,ts}\"",
-    "test:ethereum:fork": "env FORK=main NETWORK=main TS_NODE_TRANSPILE_ONLY=1 hardhat test ./test/1_ethereum/**/*.ts",
-    "test:matic:fork": "env FORK=matic NETWORK=matic TS_NODE_TRANSPILE_ONLY=1 hardhat test ./test/2_matic/**/*.ts",
+    "test:ethereum:fork": "cross-env FORK=main NETWORK=main TS_NODE_TRANSPILE_ONLY=1 hardhat test ./test/1_ethereum/**/*.ts",
+    "test:matic:fork": "cross-env FORK=matic NETWORK=matic TS_NODE_TRANSPILE_ONLY=1 hardhat test ./test/2_matic/**/*.ts",
+    "test:avalanche:fork": "cross-env FORK=avalanche NETWORK=avalanche TS_NODE_TRANSPILE_ONLY=1 hardhat test ./test/3_avalanche/**/*.ts",
+    "test:arbitrum:fork": "cross-env FORK=arbitrum NETWORK=arbitrum TS_NODE_TRANSPILE_ONLY=1 hardhat test ./test/4_arbitrum/**/*.ts",
+    "test:xdai:fork": "cross-env FORK=xdai NETWORK=xdai TS_NODE_TRANSPILE_ONLY=1 hardhat test ./test/5_xdai/**/*.ts",
+    "test:fantom:fork": "cross-env FORK=fantom NETWORK=fantom TS_NODE_TRANSPILE_ONLY=1 hardhat test ./test/6_fantom/**/*.ts",
+    "test:bsc:fork": "cross-env FORK=bsc NETWORK=bsc TS_NODE_TRANSPILE_ONLY=1 hardhat test ./test/7_bsc/**/*.ts",
+    "test:oethereum:fork": "cross-env FORK=optimistic_ethereum NETWORK=optimistic_ethereum TS_NODE_TRANSPILE_ONLY=1 hardhat test ./test/8_oethereum/**/*.ts",
     "typechain": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat typechain"
   },
   "contributors": [
