feat(matic test): add matic test in ci

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -92,3 +92,6 @@ jobs:
       - name: Test Ethereum
         run: |
           yarn test:ethereum:fork
+      - name: Test Matic
+        run: |
+          yarn test:matic:fork
