--- a/package.json
+++ b/package.json
@@ -108,10 +108,11 @@
   ],
   "license": "AGPLv3",
   "engines": {
-    "node": ">=12.0.0"
+    "node": ">=16.0.0"
   },
   "dependencies": {
     "@openzeppelin/contracts": "v3.4.0",
+    "@optyfi/defi-legos": "0.1.0-rc.10",
     "@uniswap/v2-periphery": "^1.1.0-beta.0"
   }
 }
